# An-easy-rasterizating

./: Array2D.cpp  Array2D.h  CMakeLists.txt  Camera.cpp  Camera.h  Face.cpp  Face.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  README.md  Render.cpp  Render.h  SafeQueue.cpp  SafeQueue.h  Scene.cpp  Scene.h  Texture.cpp  Texture.h  Thing.cpp  Thing.h  ThreadPool.h  Translate.cpp  Translate.h  main.cpp  tgaimage.cpp  tmp.cpp  tranPngToTga.py
Shader/: DefaultShader.cpp  LoopSubdivision.cpp  PBRShader.cpp  PcfShader.cpp  PcssShader.cpp  PhongShader.cpp  Shaders.h  ShadowMapShader.cpp  ShadowPbrShader.cpp  SimpleMesh.cpp  VertexDecimation.cpp  VsmShader.cpp  VssmShader.cpp
build2/: CMakeCache.txt  Makefile  aSmallRender  cmake_install.cmake  output0.tga  output1.tga  output10.tga  output100.tga  output11.tga  output12.tga  output13.tga  output14.tga  output15.tga  output16.tga  output17.tga  output18.tga  output19.tga  output2.tga  output20.tga  output21.tga  output22.tga  output23.tga  output24.tga  output25.tga  output26.tga  output27.tga  output28.tga  output29.tga  output3.tga  output30.tga  output31.tga  output32.tga  output33.tga  output34.tga  output35.tga  output36.tga  output37.tga  output38.tga  output39.tga  output4.tga  (+65 more)
comper/: outputL.txt  outputW.txt
math/: Mat.cpp  Mat.h  SomeVal.h  Vec.cpp  Vec.h
